K8S/products-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productservice
  template:
    metadata:
      labels:
        app: productservice
    spec:
      containers:
        - name: productservice
          image: hamdyahmed1984/productservice:latest

---
apiVersion: v1
kind: Service
metadata:
  name: products-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: productservice
  ports:
  - name: productservice
    protocol: TCP
    port: 80
    targetPort: 80
