K8S/products-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-nodeport-service
spec:
  type: NodePort
  selector: 
    app: productservice
  ports:
    - name: productservice
      protocol: TCP
      port: 80
      targetPort: 80
